# ghostvolumes

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_version_core.rs  current-issues.md  design.md  discover.md  how-it-works.md  release.toml
.github/workflows/: ci.yml  release.yml
ai-work/tasks/: atomic-file-io.plan.md  atomic-file-io.progress.md  ci-debug-log-test.plan.md  ci.plan.md  ci.progress.md  condense-source-comments.plan.md  condense-source-comments.progress.md  convert-project-model.plan.md  convert-project-model.progress.md  decide-walk-and-markers.plan.md  decide-walk-and-markers.progress.md  decision-model.plan.md  decision-model.progress.md  derive-version-from-tag.plan.md  (+17 more)
documents/: FAQ.md  convert.md  decide.md  decision-files.md  design.md  discover.md  files.md  intercept.md  project-roots.md
scripts/: update-toc.sh
shim/: btrfs_core.rs  cache_core.rs  debug_core.rs  decision_core.rs  filenames_core.rs  git_core.rs  lock_core.rs  preload.rs  project_roots_core.rs  xdg_core.rs
src/: atomic_write.rs  btrfs.rs  cache.rs  completions.rs  config.rs  convert.rs  debug.rs  decision.rs  discover.rs  ensure.rs  filenames.rs  git.rs  init.rs  intercept.rs  lock.rs  main.rs  merge.rs  mountinfo.rs  pathmatch.rs  preload_guard.rs  project_roots.rs  projects.rs  register.rs  registration.rs  reload.rs  roots.rs  scan.rs  shellinit.rs  test_support.rs  xdg.rs
tests/: btrfs_loopback.rs  cli_scaffold.rs  preload_guard_cli.rs  reload_cli.rs  roots_cli.rs  shim_ld_preload.rs
